flextape.err
Traceback (most recent call last):
  File "<frozen runpy>", line 189, in _run_module_as_main
  File "<frozen runpy>", line 159, in _get_module_details
  File "<frozen importlib._bootstrap_external>", line 1074, in get_code
  File "<frozen importlib._bootstrap_external>", line 1004, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/home/khalevy/flextape/experiments/preedit_pair_mistral.py", line 26
    "mistralai/Mistral-7B-Instruct-v0.2": "mistral"}
                                        ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "<frozen runpy>", line 189, in _run_module_as_main
  File "<frozen runpy>", line 159, in _get_module_details
  File "<frozen importlib._bootstrap_external>", line 1074, in get_code
  File "<frozen importlib._bootstrap_external>", line 1004, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/home/khalevy/flextape/experiments/preedit_pair_mistral.py", line 26
    "mistralai/Mistral-7B-Instruct-v0.2": "mistral"}
                                        ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "<frozen runpy>", line 189, in _run_module_as_main
  File "<frozen runpy>", line 159, in _get_module_details
  File "<frozen importlib._bootstrap_external>", line 1074, in get_code
  File "<frozen importlib._bootstrap_external>", line 1004, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/home/khalevy/flextape/experiments/preedit_pair_mistral.py", line 26
    "mistralai/Mistral-7B-Instruct-v0.2": "mistral"}
                                        ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "<frozen runpy>", line 189, in _run_module_as_main
  File "<frozen runpy>", line 159, in _get_module_details
  File "<frozen importlib._bootstrap_external>", line 1074, in get_code
  File "<frozen importlib._bootstrap_external>", line 1004, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/home/khalevy/flextape/experiments/preedit_pair_mistral.py", line 26
    "mistralai/Mistral-7B-Instruct-v0.2": "mistral"}
                                        ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "<frozen runpy>", line 189, in _run_module_as_main
  File "<frozen runpy>", line 159, in _get_module_details
  File "<frozen importlib._bootstrap_external>", line 1074, in get_code
  File "<frozen importlib._bootstrap_external>", line 1004, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/home/khalevy/flextape/experiments/preedit_pair_mistral.py", line 26
    "mistralai/Mistral-7B-Instruct-v0.2": "mistral"}
                                        ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "<frozen runpy>", line 189, in _run_module_as_main
  File "<frozen runpy>", line 159, in _get_module_details
  File "<frozen importlib._bootstrap_external>", line 1074, in get_code
  File "<frozen importlib._bootstrap_external>", line 1004, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/home/khalevy/flextape/experiments/preedit_pair_mistral.py", line 26
    "mistralai/Mistral-7B-Instruct-v0.2": "mistral"}
                                        ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "<frozen runpy>", line 189, in _run_module_as_main
  File "<frozen runpy>", line 159, in _get_module_details
  File "<frozen importlib._bootstrap_external>", line 1074, in get_code
  File "<frozen importlib._bootstrap_external>", line 1004, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/home/khalevy/flextape/experiments/preedit_pair_mistral.py", line 26
    "mistralai/Mistral-7B-Instruct-v0.2": "mistral"}
                                        ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "<frozen runpy>", line 189, in _run_module_as_main
  File "<frozen runpy>", line 159, in _get_module_details
  File "<frozen importlib._bootstrap_external>", line 1074, in get_code
  File "<frozen importlib._bootstrap_external>", line 1004, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/home/khalevy/flextape/experiments/preedit_pair_mistral.py", line 26
    "mistralai/Mistral-7B-Instruct-v0.2": "mistral"}
                                        ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "<frozen runpy>", line 189, in _run_module_as_main
  File "<frozen runpy>", line 159, in _get_module_details
  File "<frozen importlib._bootstrap_external>", line 1074, in get_code
  File "<frozen importlib._bootstrap_external>", line 1004, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/home/khalevy/flextape/experiments/preedit_pair_mistral.py", line 26
    "mistralai/Mistral-7B-Instruct-v0.2": "mistral"}
                                        ^
SyntaxError: invalid syntax
[nltk_data] Downloading package punkt to /home/khalevy/nltk_data...
[nltk_data]   Package punkt is already up-to-date!
Downloading shards:   0%|          | 0/3 [00:00<?, ?it/s]slurmstepd: error: *** JOB 303676 ON babel-7-37 CANCELLED AT 2024-05-17T12:56:48 ***
